# PyNanoInstantMeshes

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
native/: CMakeLists.txt  README.md
native/ext/eigen/: CMakeLists.txt
native/ext/eigen/Eigen/src/Core/: ArrayBase.h  BooleanRedux.h  CwiseUnaryView.h  DenseBase.h  DenseStorage.h  Dot.h  GenericPacketMath.h  MapBase.h  MathFunctions.h  PermutationMatrix.h  PlainObjectBase.h  ProductEvaluators.h  SolveTriangular.h  Transpose.h  Transpositions.h  TriangularMatrix.h
native/ext/eigen/Eigen/src/Eigenvalues/: ComplexSchur.h  RealSchur.h  SelfAdjointEigenSolver.h
native/ext/eigen/Eigen/src/Geometry/: Quaternion.h  Scaling.h  Transform.h  Translation.h
native/ext/eigen/Eigen/src/LU/: PartialPivLU.h
native/ext/eigen/Eigen/src/PardisoSupport/: PardisoSupport.h
native/ext/eigen/Eigen/src/SVD/: BDCSVD.h  SVDBase.h
native/ext/eigen/Eigen/src/SparseCholesky/: SimplicialCholesky.h
native/ext/eigen/Eigen/src/SparseCore/: AmbiVector.h  SparseCwiseBinaryOp.h  SparseMatrix.h  SparseSelfAdjointView.h
native/ext/eigen/Eigen/src/SparseLU/: SparseLU.h
native/ext/eigen/Eigen/src/StlSupport/: StdDeque.h
native/ext/eigen/bench/: bench_gemm.cpp
native/ext/eigen/debug/gdb/: printers.py
native/ext/eigen/doc/: Doxyfile.in  SparseQuickReference.dox  TopicMultithreading.dox
native/ext/eigen/lapack/: CMakeLists.txt
native/ext/eigen/test/: CMakeLists.txt  array_cwise.cpp  bdcsvd.cpp  ctorleak.cpp  eigensolver_generic.cpp  exceptions.cpp  geo_alignedbox.cpp  geo_quaternion.cpp  geo_transformations.cpp  inverse.cpp  main.h  product_mmtr.cpp  product_syrk.cpp  product_trmm.cpp  product_trsolve.cpp  ref.cpp  rvalue_types.cpp  sparse_basic.cpp  stddeque.cpp  stdlist.cpp  vectorization_logic.cpp
native/ext/eigen/unsupported/Eigen/: Polynomials
native/ext/eigen/unsupported/Eigen/CXX11/: ThreadPool
native/ext/eigen/unsupported/test/: EulerAngles.cpp  FFTW.cpp  NonLinearOptimization.cpp  alignedvector3.cpp  autodiff.cpp  autodiff_scalar.cpp  cxx11_meta.cpp  cxx11_tensor_cuda.cu  cxx11_tensor_of_float16_cuda.cu  cxx11_tensor_reduction.cpp  cxx11_tensor_reduction_cuda.cu  kronecker_product.cpp  levenberg_marquardt.cpp  matrix_function.cpp  matrix_power.cpp  minres.cpp  mpreal_support.cpp  openglsupport.cpp  splines.cpp
native/ext/half/: half.hpp
native/ext/pcg32/: pcg32-demo.out
native/ext/pss/: parallel_stable_sort.h
native/ext/rply/: rply.c  rply.h
native/ext/tbb/: CHANGES  Doxyfile  third-party-programs.txt
native/ext/tbb/examples/: Makefile  index.html
native/ext/tbb/examples/GettingStarted/: index.html
native/ext/tbb/examples/GettingStarted/sub_string_finder/: Makefile  readme.html  sub_string_finder.cpp  sub_string_finder_pretty.cpp
native/ext/tbb/examples/common/: copy_libraries.bat  examples-common.inc
native/ext/tbb/examples/common/gui/: Makefile.gmake  dxcheck.bat
native/ext/tbb/examples/concurrent_hash_map/: index.html
native/ext/tbb/examples/concurrent_hash_map/count_strings/: Makefile  Makefile.windows  readme.html
native/ext/tbb/examples/concurrent_priority_queue/: index.html
native/ext/tbb/examples/concurrent_priority_queue/shortpath/: Makefile  readme.html
native/ext/tbb/examples/graph/: index.html
native/ext/tbb/examples/graph/binpack/: Makefile  readme.html
native/ext/tbb/examples/graph/cholesky/: Makefile  init.cpp  readme.html
native/ext/tbb/examples/graph/dining_philosophers/: Makefile  Makefile.windows  readme.html
native/ext/tbb/examples/graph/fgbzip2/: Makefile.windows  blocksort.cpp  bzlib.cpp  bzlib.h  (+7 more)
native/ext/tbb/examples/parallel_do/: index.html
native/ext/tbb/examples/parallel_for/: index.html
native/ext/tbb/examples/parallel_reduce/: index.html
native/ext/tbb/examples/pipeline/: index.html
native/ext/tbb/examples/task/: index.html
native/ext/tbb/examples/task_arena/: index.html
native/ext/tbb/examples/task_group/: index.html
native/ext/tbb/examples/test_all/: index.html
native/ext/tbb/include/tbb/: cache_aligned_allocator.h  flow_graph.h  parallel_scan.h  parallel_sort.h  runtime_loader.h  tbb_machine.h  tbb_profiling.h
native/ext/tbb/python/: TBB.py  setup.py
native/ext/tbb/python/tbb/: __init__.py  __main__.py  api.i  pool.py  test.py
native/ext/tbb/src/: Makefile
native/ext/tbb/src/old/: concurrent_vector_v2.cpp  concurrent_vector_v2.h  spin_rw_mutex_v2.cpp  spin_rw_mutex_v2.h
native/ext/tbb/src/perf/: cpq_pdes.cpp  fibonacci_impl_tbb.cpp  harness_perf.h  perf.cpp  perf.h  perf_sched.cpp  statistics.cpp  statistics_xml.h  time_cpq_throughput_test.cpp  time_fibonacci_cutoff.cpp  time_locked_work.cpp  time_resumable_tasks.cpp  time_split_node.cpp  time_vector.cpp
native/ext/tbb/src/rml/: index.html
native/ext/tbb/src/tbb/: co_context.h  concurrent_hash_map.cpp  governor.cpp  itt_notify.cpp  mac32-tbb-export.def  mac64-tbb-export.def  market.cpp  pipeline.cpp  task.cpp  tbb_bind.cpp  tbb_main.cpp  tbb_resource.rc  win32-tbb-export.def  win32-tbb-export.lst  win64-gcc-tbb-export.def  win64-tbb-export.def
native/ext/tbb/src/tbbmalloc/: backref.cpp  frontend.cpp  large_objects.cpp  large_objects.h  mac32-tbbmalloc-export.def  proxy_overload_osx.h  shared_utils.h  tbbmalloc.rc  win32-tbbmalloc-export.def  win64-tbbmalloc-export.def
native/ext/tbb/src/test/: harness_memory.h  test_async_node.cpp  test_cache_aligned_allocator_STL.cpp  test_combinable.cpp  test_flow_graph_whitebox.cpp  test_follows_and_precedes_api.h  test_input_node.cpp  test_malloc_shutdown_hang.cpp  test_malloc_whitebox.cpp  test_model_plugin.cpp  test_opencl_node.cl  test_parallel_pipeline.cpp  test_parallel_sort.cpp  test_parallel_while.cpp  test_pipeline_with_tbf.cpp  test_reader_writer_lock.cpp  test_resumable_tasks.cpp  test_source_node.cpp  test_task_arena.cpp  test_tbb_fork.cpp  test_yield.cpp
native/im/include/: adjacency.h  common.h  field.h  smoothing.h
native/im/src/: batch.cpp  bvh.cpp  cleanup.cpp  extract.cpp  field.cpp  hierarchy.cpp  meshio.cpp  meshstats.cpp  smoothing.cpp
(+234 files in other folders)
