[project]
name = "PyNIM"
version = "0.0.3"
description = "Python binding for instant meshes"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Mark Boss", email = "hello@markboss.me" },
]
classifiers = [
    "License :: BSD",
]
# Optional: runtime dependency specification

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
