[project]
name = "PyNanoInstantMeshes"
version = "0.0.3"
description = "Python nano binding for instant meshes"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Mark Boss", email = "hello@markboss.me" },
]
classifiers = [
    "License :: BSD",
]
# Optional: runtime dependency specification

[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind >=2.0.0",
    "numpy>=1.20.0<2.0.0"
    # pin setuptools on pypy to workaround this bug: https://github.com/pypa/distutils/issues/283
    "setuptools<72.2.0; platform_python_implementation == 'PyPy'",
    "setuptools; platform_python_implementation != 'PyPy'",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
